[project]
name = "pr_flow"
version = "0.1.0"
description = "pr-flow using crewAI"
authors = [
    { name = "Bhavneet Sharma", email = "you@example.com" },
]

requires-python = ">=3.10,<=3.13"

dependencies = [
    "crewai[tools]==0.74.2",
    "asyncio",
    "pygithub>=2.4.0,<3.0.0"
]

[tool.poetry.scripts]
pr_flow = "pr_flow.main:main"
run_flow = "pr_flow.main:main"
plot_flow = "pr_flow.main:plot"

[build-system]
requires = ["poetry-core", "setuptools]
build-backend = "poetry.core.masonry.api"
